--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,43 +1,76 @@
 * {
     box-sizing: border-box;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
+/***/
+
+/* Buttons ---------------------------------------*/
+
+.btn {
+    font-size: 16px;
+    font-weight: 900;
+    color: #fff;
+    padding: 5px 0px;
+    border: none;
+    border-radius: 2px;
+    background-color: #a1b1bc;
+    text-align: center;
+    height: 50px;
+}
+
+.btn-primary {
+    width: 150px;
+    padding: 20px 0px;
+    box-shadow: 1px 3px 0px 0px #81919b;
+}
+
+.btn-secondary {
+    background-color: #1a1c27;
+    width: 200px;
+    height: 60px;
+}
+
+/* Body */
+
 body {
-    font-family:  'Lato', Arial, Helvetica, sans-serif;
-    font-size : 14px;
-    color : #a1b1bc;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #a1b1bc;
     background-color: #fff;
 }
 
 a {
-    text-decoration : none;
-    color:inherit;
+    text-decoration: none;
+    color: inherit;
 }
+
 h1 {
-    font-size: 26px;
-    font-weight: 400;
-    color:#222533;
+    font-size: 26px !important;
+    font-weight: 400px;
+    color: #222533;
 }
+
 h1 span {
     font-size: 50px;
     font-weight: 900;
 }
+
 h2 {
-    font-size : 36px;
+    font-size: 36px;
     font-weight: 300;
-    color :  #2c3e50;
+    color: #2c3e50;
 }
 
 h3 {
-    font-size : 15px;
+    font-size: 15px;
     font-weight: 700;
-    color : #2c3e50;
+    color: #2c3e50;
 }
 
 h4 {
-    color:#34495e;
+    color: #34495e;
     font-weight: 400;
 }
 
@@ -46,55 +79,166 @@ h4 {
     grid-template-columns: 1fr 1170px 1fr;
 }
 
-.wrapped-content {
+.wrapped {
     grid-column: 2/3;
 }
-
 
 /* Nav */
 
 nav {
-    padding:20px;
-    color:#2c3e50;
-} 
-ul{
+    padding: 20px;
+    color: #2c3e50;
+}
+
+ul {
     display: flex;
     flex-direction: row;
-    justify-content:center;
-    align-items:center;
-    
+    justify-content: center;
+    align-items: center;
 }
- ul li {
-    flex-grow : 1;   
+
+ul li {
+    flex-grow: 1;
 }
 
 ul li a {
     color: #2c3e50;
 }
-ul li a:hover {
-    color:#1abc9c;
-}
 
+ul li a:hover {
+    color: #1abc9c;
+}
 
 .hover-nav {
     width: 60px;
-    height:5px;
+    height: 5px;
     background-color: #1abc9c;
-    display:none;
-    position:absolute;
+    display: none;
+    position: absolute;
     text-align: center;
-    top:0px;
-}
-ul li:hover .hover-nav {
-    display:block;
+    top: 0px;
 }
 
+ul li:hover .hover-nav {
+    display: block;
+}
+
+/* nav header page */
 
 .img-info {
-    background-image: url(./img/bg123.jpg);    
+    background-image: url(./img/bg123.jpg);
     background-size: cover;
-    height:899px; 
+    height: 899px;
     line-height: 50px;
     margin-top: 1%;
     width: 100%;
+}
+
+.content-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.content {
+    padding: 100px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.content-justified {
+    justify-content: space-around;
+}
+
+.linea {
+    width: 270px;
+    height: 4px;
+    background-color: #1a1c27;
+    z-index: 1;
+    position: relative;
+}
+
+.linea-azul {
+    width: 100px;
+    height: 4px;
+    background-color: #21c2f8;
+    position: absolute;
+}
+
+ol {
+    padding-top: 8px !important;
+}
+
+ol li {
+    font-size: 20px;
+    font-weight: 700;
+    list-style-type: none;
+    list-style-position: inside;
+    padding-bottom: 20px;
+    color: #222533;
+}
+
+ol li p {
+    display: inline;
+    padding-left: 10px;
+}
+
+ol li i {
+    font-size: 15px;
+    display: inline;
+    background-color: #fff;
+    border: 1px solid #cecbcb;
+}
+
+/*-- Seccion Hello ! ---------------------------*/
+
+.content-right {
+    padding-right: 20px;
+}
+
+.accordion {
+    padding-bottom: 5px;
+}
+
+.accordion-left {
+    display: inline-block;
+    border-top: 1px solid #eceef0;
+    border-left: 1px solid #eceef0;
+    border-bottom: 1px solid #eceef0;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    padding: 18px;
+    width: 533px;
+}
+
+.accordion-right {
+    border: 1px solid #eceef0;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    padding: 19px;
+    display: inline-block;
+    width: 48px;
+}
+
+.accordion-body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border-right: 1px solid #eceef0;
+    border-left: 1px solid #eceef0;
+    border-bottom: 1px solid #eceef0;
+    border-radius: 0px 0px 3px 3px;
+    padding: 20px;
+}
+
+.accordion-body p {
+    padding: 20px;
+    line-height: 24px;
+}
+
+.accordion-body img {
+    border: 1px solid #eceef0;
 }
